--- a/_toc.yml
+++ b/_toc.yml
@@ -4,5 +4,9 @@
 format: jb-book
 root: README
 chapters:
-- file: sql-notes
-  title: SQL Learning Notebook
+- file: chapters/chapter1
+  title: "Chapter 1: SQL Basics"
+- file: chapters/chapter2  
+  title: "Chapter 2: Intermediate SQL"
+- file: chapters/chapter3
+  title: "Chapter 3: Advanced SQL"
