--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ bibtex_bibfiles:
 # Information about where the book exists on the web
 repository:
   url: https://github.com/ranjanchoubey/sql-notes
-  path_to_book: docs
+  path_to_book: ""  # Changed from docs since we'll deploy from root
   branch: main
 
 # Add GitHub buttons to your book
