--- a/_config.yml
+++ b/_config.yml
@@ -36,14 +36,12 @@ html:
     use_edit_page_button: true
     use_download_button: true
     use_fullscreen_button: true
-    home_page_in_toc: false
-    show_navbar_depth: 2
+    home_page_in_toc: true
+    show_navbar_depth: 3
+    show_toc_level: 2
+    navigation_with_keys: false
     logo:
       text: "SQL Learning Notes"
-    # Color scheme
-    primary_sidebar_end: []
-    article_header_start: []
-    content_footer_items: []
 
 # Parse and render settings
 parse:
@@ -57,8 +55,10 @@ parse:
 # Sphinx configuration
 sphinx:
   config:
+    html_show_sourcelink: false
     html_theme_options:
       repository_url: https://github.com/ranjanchoubey/sql-notes
       use_repository_button: true
       use_issues_button: true
+      use_edit_page_button: true
       use_edit_page_button: true
