--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,44 +1,44 @@
-name: Deploy Jupyter Book to GitHub Pages
+name: deploy-book
 
+# Only run this when the main branch changes
 on:
-  # Trigger on push to main branch
   push:
-    branches: [ main ]
-  
-  # Allow manual trigger
-  workflow_dispatch:
+    branches:
+    - main
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+  pull_request:
+    branches:
+    - main
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
+# This job installs dependencies, build the book, and pushes it to `gh-pages`
 jobs:
-  # Build job
-  build:
+  deploy-book:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v3
 
-    - name: Setup Python
+    # Install dependencies
+    - name: Set up Python 3.9
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
+        python-version: 3.9
 
     - name: Install dependencies
       run: |
-        pip install --upgrade pip
         pip install -r requirements.txt
 
+    # Build the book
     - name: Build the book
       run: |
+        jupyter-book build .
+
+    # Push the book's HTML to github-pages
+    - name: GitHub Pages action
+      uses: peaceiris/actions-gh-pages@v3
+      if: ${{ github.event_name == 'push' }}
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./_build/html
         jupyter-book build .
 
     - name: Setup Pages
