--- a/_toc.yml
+++ b/_toc.yml
@@ -2,13 +2,34 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: README
+root: sql-notes
 options:
   numbered: true
 chapters:
 - file: chapters/chapter1
-  title: "Chapter 1: SQL Basics"
-- file: chapters/chapter2  
-  title: "Chapter 2: Intermediate SQL"
+  title: "SQL Fundamentals"
+  sections:
+  - file: chapters/chapter1-1-setup
+    title: "Database Setup and Connection"
+  - file: chapters/chapter1-2-tables
+    title: "Creating Tables and Data Types"
+  - file: chapters/chapter1-3-queries
+    title: "Basic SELECT Queries"
+
+- file: chapters/chapter2
+  title: "Advanced SQL Operations"
+
 - file: chapters/chapter3
-  title: "Chapter 3: Advanced SQL"
+  title: "Window Functions and Analytics"
+
+- file: chapters/chapter5
+  title: "Real-World SQL Projects"
+  sections:
+  - file: chapters/chapter5-1-data-analysis
+    title: "Business Data Analysis"
+  - file: chapters/chapter5-2-reporting
+    title: "Creating Reports"
+  - file: chapters/chapter5-3-etl
+    title: "ETL Processes"
+  - file: chapters/chapter5-4-integration
+    title: "Python Integration"
