--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ Thumbs.db
 # Don't ignore the main notebook files
 !sql-notes.ipynb
 !chapters/*.ipynb
+
+# Don't ignore docs folder (needed for GitHub Pages)
+!docs/
